butterfly: use BContentView common toolbar structure